feat: сверстать header

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -2,4 +2,12 @@
   width: 100vw;
   height: 100vh;
   background-color: #202020;
+  font-family: "Inter", "Arial", "Helvetica", sans-serif;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-font-smoothing: antialiased;
+  -webkit-text-size-adjust: 100%;
+  -ms-text-size-adjust: 100%;
+  -moz-text-size-adjust: 100%;
+  text-rendering: optimizeLegibility;
+  color: #fff;
 }
