--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,8 @@
 @import url(./vendor/normalize.css);
+@import url(./vendor/fonts.css);
+
+@import url(./utils/UI/UI.css);
 
 @import url(./components/App/App.css);
+
+@import url(./components/Header/Header.css);
