--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,10 @@
 
 @import url(./utils/UI/UI.css);
 
+@import url(./components/Main/Main.css);
+
 @import url(./components/App/App.css);
 
 @import url(./components/Header/Header.css);
+
+@import url(./components/Promo/Promo.css);
