feat: сверстать AboutProject

--- a/src/index.css
+++ b/src/index.css
@@ -10,3 +10,5 @@
 @import url(./components/Header/Header.css);
 
 @import url(./components/Promo/Promo.css);
+
+@import url(./components/AboutProject/AboutProject.css);
