--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,8 +1,8 @@
 .page {
   display: flex;
   flex-direction: column;
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   background-color: #202020;
   font-family: "Inter", "Arial", "Helvetica", sans-serif;
   -moz-osx-font-smoothing: grayscale;
