--- a/src/utils/UI/UI.css
+++ b/src/utils/UI/UI.css
@@ -12,7 +12,15 @@
 }
 
 .text {
+  margin: 0;
   font-weight: 400;
   font-size: 12px;
   line-height: calc(18 / 12);
+}
+
+.text_title {
+  margin: 0;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: calc(24 / 20);
 }
