--- a/src/index.css
+++ b/src/index.css
@@ -12,3 +12,5 @@
 @import url(./components/Promo/Promo.css);
 
 @import url(./components/AboutProject/AboutProject.css);
+
+@import url(./components/Techs/Techs.css);
