feat: сверстать AboutMe

--- a/src/index.css
+++ b/src/index.css
@@ -14,3 +14,5 @@
 @import url(./components/AboutProject/AboutProject.css);
 
 @import url(./components/Techs/Techs.css);
+
+@import url(./components/AboutMe/AboutMe.css);
