--- a/src/utils/UI/UI.css
+++ b/src/utils/UI/UI.css
@@ -36,6 +36,13 @@
   line-height: calc(24 / 20);
 }
 
+.text_medium {
+  margin: 0;
+  font-weight: 400;
+  font-size: 30px;
+  line-height: calc(50 / 30);
+}
+
 .underline-p25 {
   position: relative;
   padding-bottom: 25px;
