--- a/src/index.css
+++ b/src/index.css
@@ -16,3 +16,5 @@
 @import url(./components/Techs/Techs.css);
 
 @import url(./components/AboutMe/AboutMe.css);
+
+@import url(./components/Portfolio/Portfolio.css);
