--- a/src/utils/UI/UI.css
+++ b/src/utils/UI/UI.css
@@ -57,3 +57,18 @@
   bottom: 0;
   left: 0;
 }
+
+.underline-p20 {
+  position: relative;
+  padding-bottom: 20px;
+}
+
+.underline-p20::after {
+  position: absolute;
+  content: "";
+  width: 100%;
+  height: 1px;
+  background-color: rgba(66, 66, 66, 1);
+  bottom: 0;
+  left: 0;
+}
