--- a/src/components/Portfolio/Portfolio.css
+++ b/src/components/Portfolio/Portfolio.css
@@ -12,9 +12,12 @@
   display: flex;
   flex-direction: column;
   gap: 40px;
+  align-items: stretch;
 }
 
 .portfolio__link {
+  display: flex;
+  justify-content: space-between;
   text-decoration: none;
   color: white;
 }
