feat: сверстать Footer

--- a/src/index.css
+++ b/src/index.css
@@ -18,3 +18,5 @@
 @import url(./components/AboutMe/AboutMe.css);
 
 @import url(./components/Portfolio/Portfolio.css);
+
+@import url(./components/Footer/Footer.css);
