--- a/src/components/Promo/Promo.css
+++ b/src/components/Promo/Promo.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   border-radius: 10px;
-  margin: 20px 40px;
+  margin: 20px 40px 0 40px;
   align-items: center;
 }
 
@@ -32,4 +32,13 @@
 
 .promo__list-item:hover {
   opacity: 0.6;
+}
+
+@media screen and (max-width: 768px) {
+  .promo {
+    margin: 20px 20px 0 20px;
+  }
+  .promo__title {
+    padding: 320px 20px;
+  }
 }
