--- a/src/components/Techs/Techs.css
+++ b/src/components/Techs/Techs.css
@@ -19,6 +19,9 @@
   list-style-type: none;
   gap: 10px;
   text-align: center;
+  padding: 0;
+  margin: 0;
+  flex-wrap: wrap;
 }
 
 .techs__list-item {
@@ -26,4 +29,13 @@
   padding: 20px 0;
   border-radius: 10px;
   box-sizing: border-box;
+}
+
+@media screen and (max-width: 1024px) {
+  .techs {
+    padding: 90px 50px;
+  }
+  .techs__list-item {
+    width: 84px;
+  }
 }
