--- a/src/components/AboutProject/AboutProject.css
+++ b/src/components/AboutProject/AboutProject.css
@@ -14,6 +14,7 @@
   display: flex;
   gap: 10px;
   padding: 70px 0 110px 0;
+  margin: 0;
   list-style-type: none;
 }
 
@@ -32,7 +33,7 @@
 }
 
 .project__duration-area:nth-child(1) {
-  width: 20%;
+  width: 40%;
 }
 
 .project__duration-time {
@@ -46,5 +47,20 @@
 @media screen and (max-width: 768px) {
   .project {
     padding: 90px 50px;
+  }
+}
+
+@media screen and (max-width: 375px) {
+  .project {
+    padding: 70px 18px;
+  }
+  .project__about {
+    flex-direction: column;
+    gap: 56px;
+    padding-top: 90px;
+    padding-bottom: 60px;
+  }
+  .project__about-title {
+    padding-bottom: 16px;
   }
 }
