--- a/src/utils/UI/UI.css
+++ b/src/utils/UI/UI.css
@@ -82,3 +82,23 @@
   left: 0;
   transform: translate(0, 20px);
 }
+
+@media screen and (max-width: 768px) {
+  .text {
+    font-size: 10px;
+    line-height: calc(16 / 10);
+  }
+  .text_medium {
+    font-size: 18px;
+    line-height: calc(28 / 18);
+  }
+
+  .text_title {
+    font-size: 30px;
+    line-height: calc(36 / 30);
+  }
+  .text_subtitle {
+    font-size: 18px;
+    line-height: calc(22 / 18);
+  }
+}
