feat: сверсать Login, Register

--- a/src/index.css
+++ b/src/index.css
@@ -20,3 +20,5 @@
 @import url(./components/Portfolio/Portfolio.css);
 
 @import url(./components/Footer/Footer.css);
+
+@import url(./components/Auth/Auth.css);
