--- a/src/components/Auth/Auth.css
+++ b/src/components/Auth/Auth.css
@@ -1,38 +1,55 @@
 .auth {
   display: flex;
+  max-width: 396px;
+  width: 100%;
   flex-direction: column;
   flex-grow: 1;
   margin: 0 auto;
   align-items: center;
-  padding-top: 100px;
+  padding-top: 70px;
+}
+
+.auth__logo {
+  align-self: start;
+  padding-bottom: 40px;
+}
+
+.auth__title {
+  margin: 0;
+  padding-bottom: 40px;
+  font-size: 24px;
+  line-height: calc(29 / 24);
+  font-weight: 500;
+  align-self: start;
 }
 
 .auth__form {
   display: flex;
+  width: 100%;
   flex-direction: column;
-  width: 358px;
-  height: 350px;
   justify-content: space-between;
 }
 
 .auth__input-container {
   display: flex;
   flex-direction: column;
-  gap: 30px;
   width: 100%;
+  gap: 24px;
 }
 
-.auth__link {
-  text-decoration: none;
-  color: white;
-  padding-top: 15px;
-  font-size: 14px;
-  line-height: calc(17 / 14);
+.auth__input {
+  width: 100%;
+  background: transparent;
+  border: none;
+  border-bottom: 1px solid #424242;
+  color: rgba(255, 255, 255, 1);
+  height: 28px;
+  outline-color: transparent;
+  outline: none;
 }
 
-.auth__link:hover {
-  opacity: 0.6;
-  transition: opacity 0.6s;
+.auth__input:focus {
+  border-bottom: 1px solid #4285f4;
 }
 
 .auth__submit {
@@ -44,6 +61,9 @@
   font-weight: 400;
   border-radius: 2px;
   border: none;
+  background-color: #4285f4;
+  color: white;
+  margin-top: 180px;
 }
 
 .auth__submit:hover {
@@ -51,12 +71,42 @@
   transition: opacity 0.6s;
 }
 
-.auth__title {
-  margin: 0;
-  padding-bottom: 50px;
-  font-size: 24px;
-  line-height: calc(29 / 24);
-  font-weight: 900;
+.auth__link-container {
+  display: flex;
+  align-self: center;
+  gap: 6px;
+  padding-top: 16px;
+  padding-bottom: 230px;
+}
+
+.auth__input-label {
+  display: flex;
+  flex-direction: column;
+}
+
+.auth__link {
+  text-decoration: none;
+  color: #4285f4;
+}
+
+.auth__link:hover {
+  opacity: 0.6;
+  transition: opacity 0.6s;
+}
+
+.auth__error {
+  box-sizing: border-box;
+  color: #ee3465;
+  font-size: 10px;
+  height: 12px;
+  margin-top: 5px;
+  opacity: 0;
+  line-height: 1.2;
+  transition: opacity 0.3s;
+}
+
+.auth__error_visible {
+  opacity: 1;
 }
 
 @media screen and (max-width: 375px) {
@@ -67,12 +117,11 @@
 
 @media screen and (max-width: 375px) {
   .auth__form {
-    height: 305px;
-    width: 260px;
   }
 }
 @media screen and (max-width: 375px) {
   .auth {
+    max-width: 260px;
     padding-top: 40px;
   }
 }
