--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -11,9 +11,18 @@
   align-items: center;
 }
 
-.header__links {
+.header__navigante {
   display: flex;
   gap: 30px;
+}
+
+.header__navigante-movies {
+  justify-content: space-between;
+  width: 100%;
+}
+
+.header__movies {
+  display: flex;
 }
 
 .header__link {
@@ -23,6 +32,16 @@
   text-decoration: none;
   color: inherit;
   text-align: center;
+  box-sizing: border-box;
+}
+
+.header__link-profile {
+  width: 100px;
+  padding: 9px 0;
+  border-radius: 20px;
+  text-align: center;
+  text-decoration: none;
+  color: white;
   box-sizing: border-box;
 }
 
