feat: сверстать SearchForm

--- a/src/index.css
+++ b/src/index.css
@@ -22,3 +22,5 @@
 @import url(./components/Footer/Footer.css);
 
 @import url(./components/Auth/Auth.css);
+
+@import url(./components/SearchForm/SearchForm.css);
