--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,9 +1,13 @@
 .footer {
+  display: flex;
+  flex-direction: column;
   padding: 80px 70px 20px 70px;
   max-width: 1280px;
   width: 100%;
   margin: 0 auto;
   box-sizing: border-box;
+  flex: 1;
+  justify-content: flex-end;
 }
 
 .footer__title {
