--- a/src/index.css
+++ b/src/index.css
@@ -24,3 +24,9 @@
 @import url(./components/Auth/Auth.css);
 
 @import url(./components/SearchForm/SearchForm.css);
+
+@import url(./components/Movies/Movies.css);
+
+@import url(./components/MoviesCardList/MoviesCardList.css);
+
+@import url(./components/MoviesCard/MoviesCard.css);
