feat: сверстана карточка для MovieCard

--- a/src/components/MoviesCardList/MoviesCardList.css
+++ b/src/components/MoviesCardList/MoviesCardList.css
@@ -1,15 +1,16 @@
 .cards {
   display: flex;
   flex-direction: column;
-  align-items: center;
   padding: 80px 70px;
+  width: 100%;
+  box-sizing: border-box;
 }
 
 .cards__list {
-  display: flex;
-  flex-wrap: wrap;
+  justify-items: center;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(364px, 1fr));
   gap: 24px;
-  justify-content: center;
   padding-bottom: 50px;
 }
 
@@ -22,4 +23,5 @@
   border: 1px solid rgba(64, 64, 64, 1);
   border-radius: 5px;
   cursor: pointer;
+  align-self: center;
 }
