--- a/src/components/MoviesCard/MoviesCard.css
+++ b/src/components/MoviesCard/MoviesCard.css
@@ -1,5 +1,50 @@
 .card {
   max-width: 364px;
+  max-height: 271px;
+  min-height: 236px;
+  height: 100%;
   width: 100%;
-  height: 271px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.card__image {
+  width: 100%;
+  max-height: 203px;
+  height: 100%;
+}
+
+.card__header {
+  height: 68px;
+  display: flex;
+  justify-content: space-between;
+  padding: 14px;
+  align-items: center;
+}
+
+.card__title {
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+  max-width: 280px;
+  width: 100%;
+  padding-bottom: 9px;
+}
+
+.card__favorite {
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  background-image: url(../../images/favorite.svg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 40%;
+  border: none;
+  cursor: pointer;
+}
+
+.card__favorite_active {
+  background-image: url(../../images/favorite-fill.svg);
+  background-color: rgba(61, 220, 132, 1);
 }
