--- a/src/components/MoviesCard/MoviesCard.css
+++ b/src/components/MoviesCard/MoviesCard.css
@@ -21,6 +21,7 @@
   justify-content: space-between;
   padding: 14px;
   align-items: center;
+  box-sizing: border-box;
 }
 
 .card__title {
@@ -29,7 +30,7 @@
   overflow: hidden;
   max-width: 280px;
   width: 100%;
-  padding-bottom: 9px;
+  padding-bottom: 5px;
 }
 
 .card__favorite {
