--- a/src/index.css
+++ b/src/index.css
@@ -30,3 +30,5 @@
 @import url(./components/MoviesCardList/MoviesCardList.css);
 
 @import url(./components/MoviesCard/MoviesCard.css);
+
+@import url(./components/Preloader/Preloader.css);
