--- a/src/components/MoviesCard/MoviesCard.css
+++ b/src/components/MoviesCard/MoviesCard.css
@@ -11,11 +11,12 @@
 
 .card__image {
   width: 100%;
-  max-height: 203px;
+  min-height: 203px;
   height: 100%;
 }
 
 .card__header {
+  width: 100%;
   height: 68px;
   display: flex;
   justify-content: space-between;
@@ -28,13 +29,14 @@
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
-  max-width: 280px;
+  max-width: 250px;
   width: 100%;
   padding-bottom: 5px;
 }
 
 .card__favorite {
-  width: 30px;
+  max-width: 30px;
+  width: 100%;
   height: 30px;
   border-radius: 50%;
   background-image: url(../../images/favorite.svg);
@@ -43,9 +45,34 @@
   background-size: 40%;
   border: none;
   cursor: pointer;
+  padding: 0;
 }
 
 .card__favorite_active {
   background-image: url(../../images/favorite-fill.svg);
   background-color: rgba(61, 220, 132, 1);
+}
+
+@media screen and (max-width: 768px) {
+  .card {
+    max-width: 339px;
+    max-height: 258px;
+  }
+}
+
+@media screen and (max-width: 640px) {
+  .card {
+    margin-bottom: 30px;
+  }
+}
+
+@media screen and (max-width: 375px) {
+  .card {
+    max-width: 300px;
+    max-height: 236px;
+  }
+
+  .card__title {
+    max-width: 210px;
+  }
 }
