feat: верстка Profile

--- a/src/index.css
+++ b/src/index.css
@@ -32,3 +32,5 @@
 @import url(./components/MoviesCard/MoviesCard.css);
 
 @import url(./components/Preloader/Preloader.css);
+
+@import url(./components/Profile/Profile.css);
