feat: верстка NotFoundPage

--- a/src/index.css
+++ b/src/index.css
@@ -34,3 +34,5 @@
 @import url(./components/Preloader/Preloader.css);
 
 @import url(./components/Profile/Profile.css);
+
+@import url(./components/NotFoundPage/NotFoundPage.css);
