--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -50,7 +50,7 @@
   display: flex;
   text-align: center;
   flex: 1;
-  justify-content: end;
+  justify-content: flex-end;
 }
 
 .header__link-profile {
@@ -110,7 +110,7 @@
 
   .header__navigate-movies {
     display: flex;
-    justify-content: end;
+    justify-content: flex-end;
   }
 
   .header__movies {
