feat: аутентификация + модальное окно

--- a/src/index.css
+++ b/src/index.css
@@ -38,3 +38,5 @@
 @import url(./components/Profile/Profile.css);
 
 @import url(./components/NotFoundPage/NotFoundPage.css);
+
+@import url(./components/InfoToolTip/InfoToolTip.css);
