--- a/src/components/InfoToolTip/InfoToolTip.css
+++ b/src/components/InfoToolTip/InfoToolTip.css
@@ -46,7 +46,7 @@
   right: 0;
   top: 0;
   background-color: rgba(0, 0, 0, 0);
-  background-image: url(../../images/close.png);
+  background-image: url(../../images/close.svg);
   background-size: 100%;
   background-repeat: no-repeat;
   background-position: center;
