--- a/src/components/Techs/Techs.css
+++ b/src/components/Techs/Techs.css
@@ -4,6 +4,21 @@
   padding: 100px 70px;
 }
 
+.techs__header {
+  position: relative;
+}
+
+.techs__header::after {
+  position: absolute;
+  content: "";
+  width: 100%;
+  height: 1px;
+  background-color: rgba(218, 218, 218, 1);
+  bottom: 0;
+  left: 0;
+  transform: translate(0, 25px);
+}
+
 .techs__info {
   text-align: center;
   padding-top: 80px;
@@ -45,5 +60,10 @@
 @media screen and (max-width: 375px) {
   .techs {
     padding: 70px 18px;
+    background-color: transparent;
+  }
+
+  .techs__header::after {
+    background-color: black;
   }
 }
