--- a/src/components/Auth/Auth.css
+++ b/src/components/Auth/Auth.css
@@ -37,20 +37,6 @@
   gap: 24px;
 }
 
-.auth__input {
-  width: 100%;
-  background: transparent;
-  border: none;
-  border-bottom: 1px solid #424242;
-  color: white;
-  height: 28px;
-  outline: none;
-}
-
-.auth__input:focus {
-  border-bottom: 1px solid #4285f4;
-}
-
 .auth__submit {
   align-self: end;
   width: 100%;
@@ -78,11 +64,6 @@
   padding-top: 16px;
 }
 
-.auth__input-label {
-  display: flex;
-  flex-direction: column;
-}
-
 .auth__link {
   text-decoration: none;
   color: #4285f4;
@@ -93,21 +74,6 @@
   transition: opacity 0.6s;
 }
 
-.auth__error {
-  box-sizing: border-box;
-  color: #ee3465;
-  font-size: 10px;
-  height: 12px;
-  margin-top: 5px;
-  opacity: 0;
-  line-height: 1.2;
-  transition: opacity 0.3s;
-}
-
-.auth__error_visible {
-  opacity: 1;
-}
-
 @media screen and (max-width: 375px) {
   .auth {
     max-width: 260px;
@@ -115,5 +81,11 @@
   }
   .auth__title {
     padding-bottom: 40px;
+  }
+  .auth__logo {
+    align-self: center;
+  }
+  .auth__title {
+    align-self: center;
   }
 }
