--- a/src/components/MoviesCard/MoviesCard.css
+++ b/src/components/MoviesCard/MoviesCard.css
@@ -53,6 +53,10 @@
   background-color: rgba(61, 220, 132, 1);
 }
 
+.card__favorite_delete {
+  background-image: url(../../images/close.svg);
+}
+
 @media screen and (max-width: 768px) {
   .card {
     max-width: 339px;
