--- a/src/components/InfoToolTip/InfoToolTip.css
+++ b/src/components/InfoToolTip/InfoToolTip.css
@@ -5,7 +5,7 @@
   font-family: "Inter", "Arial", sans-serif;
   position: fixed;
   z-index: 1;
-  background-color: rgba(0, 0, 0, 0.5);
+  background-color: rgba(0, 0, 0, 0.3);
   top: 0;
   bottom: 0;
   left: 0;
@@ -27,7 +27,7 @@
   position: relative;
   max-width: 430px;
   width: 100%;
-  background-color: #fff;
+  background-color: rgba(47, 47, 47, 1);
   border-radius: 10px;
   padding: 36px;
   text-align: center;
@@ -61,7 +61,7 @@
 }
 
 .popup__title {
-  color: #000;
+  color: rgba(139, 139, 139, 1);
   font-size: 24px;
   line-height: calc(29 / 24);
   font-weight: 900;
