--- a/src/components/Profile/Profile.css
+++ b/src/components/Profile/Profile.css
@@ -37,6 +37,11 @@
   color: white;
   text-align: end;
   width: 100%;
+  outline: none;
+}
+
+.profile__input:focus {
+  border-bottom: 1px solid #4285f4;
 }
 
 .profile__submit {
@@ -44,6 +49,7 @@
   background-color: transparent;
   border: none;
   color: white;
+  cursor: pointer;
 }
 
 .profile__logout {
