--- a/src/components/Auth/Auth.css
+++ b/src/components/Auth/Auth.css
@@ -51,6 +51,21 @@
   margin-top: 180px;
 }
 
+.auth__submit_disabled {
+  align-self: end;
+  width: 100%;
+  height: 50px;
+  font-size: 18px;
+  line-height: calc(22 / 18);
+  font-weight: 400;
+  border-radius: 2px;
+  border: none;
+  background-color: #4285f4;
+  color: white;
+  margin-top: 180px;
+  opacity: 0.5;
+}
+
 .auth__submit:hover {
   opacity: 0.8;
   transition: opacity 0.6s;
