feat: добавить favicon добавить propTypes для Modal

--- a/src/index.css
+++ b/src/index.css
@@ -39,4 +39,4 @@
 
 @import url(./components/NotFoundPage/NotFoundPage.css);
 
-@import url(./components/InfoToolTip/InfoToolTip.css);
+@import url(./components/Modal/Modal.css);
