--- a/src/components/Modal/Modal.css
+++ b/src/components/Modal/Modal.css
@@ -1,28 +1,50 @@
-.popup {
+@keyframes openCloseModal {
+  0% {
+    opacity: 0;
+  }
+  25% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 1;
+  }
+  90% {
+    opacity: 0.1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+
+.modal {
   display: flex;
   align-items: center;
   justify-content: center;
   font-family: "Inter", "Arial", sans-serif;
-  position: fixed;
-  z-index: 1;
-  background-color: rgba(0, 0, 0, 0.3);
   top: 0;
   bottom: 0;
   left: 0;
   right: 0;
+  position: fixed;
   visibility: hidden;
-  opacity: 0;
-  transition: visibility 0.5s, opacity 0.5s linear;
+  animation: openCloseModal 5s 1 linear;
 }
 
-.popup_opened {
+.modal_opened {
   display: flex;
   visibility: visible;
-  opacity: 1;
+  opacity: 0;
   transition: opacity 0.5s linear;
 }
 
-.popup__container {
+.modal__overlay {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.3);
+}
+
+.modal__container {
   box-sizing: border-box;
   position: relative;
   max-width: 430px;
@@ -31,14 +53,15 @@
   border-radius: 10px;
   padding: 36px;
   text-align: center;
+  z-index: 1;
 }
 
-.popup__image {
+.modal__image {
   padding-top: 24px;
   padding-bottom: 32px;
 }
 
-.popup__close {
+.modal__close {
   position: absolute;
   padding: 0;
   width: 32px;
@@ -56,11 +79,11 @@
   transition: opacity 0.6s;
 }
 
-.popup__close:hover {
+.modal__close:hover {
   opacity: 0.6;
 }
 
-.popup__title {
+.modal__title {
   color: rgba(139, 139, 139, 1);
   font-size: 24px;
   line-height: calc(29 / 24);
@@ -71,7 +94,7 @@
 }
 
 @media screen and (max-width: 768px) {
-  .popup__title {
+  .modal__title {
     font-size: 18px;
     line-height: calc(22 / 18);
     padding-bottom: 68px;
@@ -79,7 +102,7 @@
 }
 
 @media screen and (max-width: 768px) {
-  .popup__close {
+  .modal__close {
     width: 20px;
     height: 20px;
     transform: translate(0, -36px);
@@ -87,7 +110,7 @@
 }
 
 @media screen and (max-width: 768px) {
-  .popup__container {
+  .modal__container {
     padding: 25px 22px;
     max-width: 282px;
   }
